[package]
authors = ["Evgeniy A. Cymbalyuk <cimbaluk@gmail.com>"]
edition = "2018"
name = "rust_ray"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
rand = "0.7.3"

[lib]

[[example]]
name = "hello_ppm"

[[example]]
name = "hello_bmp"
