[package]
authors = ["Evgeniy A. Cymbalyuk <cimbaluk@gmail.com>"]
edition = "2018"
name = "rust_ray"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num = "0.3"
rand = "0.7.3"

# utils
num_cpus = "1.13.0"

# parsing
linked-hash-map = {version = "0.5.3", features = ["serde_impl"]}
serde = {version = "1.0.117", features = ["derive"]}
serde_yaml = "0.8.14"

[lib]

[[example]]
name = "hello_ppm"

[[example]]
name = "hello_bmp"
